--- a/ella.cabal
+++ b/ella.cabal
@@ -16,8 +16,8 @@ Library
         containers >= 0.1.0,
         utf8-string >= 0.3.1,
         xhtml >= 3000,
+        parsec >= 2.1 && <= 3,
         network >= 2.1,
-        parsec >= 2.3,
         cgi >= 3001
   Exposed-Modules:
     Ella.Request, Ella.Response, Ella.GenUtils, Ella.Utils, Ella.Framework,
