--- a/ella.cabal
+++ b/ella.cabal
@@ -18,6 +18,7 @@ Library
         xhtml >= 3000,
         parsec >= 2.1 && <= 3,
         network >= 2.1,
+        SHA >= 1.0.2,
         cgi >= 3001
   Exposed-Modules:
     Ella.Request, Ella.Response, Ella.GenUtils, Ella.Utils, Ella.Framework,
