--- a/ella.cabal
+++ b/ella.cabal
@@ -19,6 +19,7 @@ Library
         parsec >= 2.1 && <= 3,
         network >= 2.1,
         SHA >= 1.0.2,
+        old-time >= 1.0.0,
         cgi >= 3001
   Exposed-Modules:
     Ella.Request, Ella.Response, Ella.GenUtils, Ella.Utils, Ella.Framework,
