--- a/ella.cabal
+++ b/ella.cabal
@@ -23,7 +23,8 @@ Library
         cgi >= 3001
   Exposed-Modules:
     Ella.Request, Ella.Response, Ella.GenUtils, Ella.Utils, Ella.Framework,
-    Ella.Processors.General, Ella.Param, Ella.Forms.Widgets,
+    Ella.Processors.General, Ella.Processors.Security
+    Ella.Param, Ella.Forms.Widgets,
     Ella.Forms.Base, Ella.Forms.Widgets.TextInput, Ella.Forms.Widgets.Textarea,
     Ella.Forms.Widgets.RadioButton, Ella.Forms.Widgets.RadioButtonList, 
     Ella.TestUtils
