--- a/ella.cabal
+++ b/ella.cabal
@@ -11,18 +11,18 @@ Build-Type:     Simple
 Library
   Build-Depends:
         base == 4.*,
-        bytestring == 0.9.*,
-        stringsearch == 0.2.*,
+        bytestring >= 0.9.1,
+        stringsearch >= 0.2.1.1,
         haskell98 >= 1.0.1,
-        containers == 0.2.*,
-        utf8-string == 0.3.*,
-        xhtml == 3000.*,
-        parsec == 2.1.*,
-        network == 2.2.*,
-        SHA == 1.4.*,
-        old-time == 1.0.*,
-        unix == 2.3.*,
-        cgi == 3001.*
+        containers >= 0.1.0,
+        utf8-string >= 0.3.1,
+        xhtml >= 3000,
+        parsec >= 2.1 && <= 3,
+        network >= 2.1,
+        SHA >= 1.0.2,
+        old-time >= 1.0.0,
+        unix >= 2.3,
+        cgi >= 3001
   Exposed-Modules:
     Ella.Request, Ella.Response, Ella.GenUtils, Ella.Utils, Ella.Framework,
     Ella.Processors.General, Ella.Processors.Security
